--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Summary</h1>
+    <img src="./images/bro.jpeg">
     <p>This is quite an interesting project, but for now, and up until I know more about Web Developing, I am going to leave it like so xdxdd.</p>
     <hr />
     <h1>Edducation</h1>    
